tests/int/use_command/snapshots/integration__int__use_command__flags__modules_app_flags_r_e_grouped.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/modules
    - use
    - app
    - "-r"
    - "-e"
    - "--grouped"
---
success: true
exit_code: 0
----- stdout -----
app
 - modules::advanced_globs::*
 - modules::dir_module
 - modules::file_module
 - modules::glob_patterns::*
 - modules::glob_patterns::constants::*
 - modules::glob_patterns::demonstrate_glob_utilities
 - modules::glob_patterns::demonstrate_nested_glob
 - modules::glob_patterns::renamed_special
 - modules::glob_patterns::traits::*
 - modules::glob_patterns::types::*
 - modules::glob_patterns::utilities::*
 - modules::glob_showcase::*
 - modules::inline_modules
 - modules::item_visibility::*
 - modules::item_visibility::PUB_CONST
 - modules::item_visibility::PUB_STATIC
 - modules::item_visibility::PubEnum
 - modules::item_visibility::PubStruct
 - modules::item_visibility::PubTrait
 - modules::mixed
 - modules::nesting
 - modules::reexports::*
 - modules::visibility

----- stderr -----
